// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componenete <GifGrid /> Debe mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Dragon ball
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="cualquiera"
      url="https://imagescda.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componenete <GifGrid /> El componenete debe ser renderizado correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeInDown"
  >
    Dragon ball
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
